Add Enum Role make authentication configuration