@@ -3,16 +3,18 @@ package com.example.Portfolio.entities;
 import jakarta.persistence.*;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 
 @Entity
 @Data
 @NoArgsConstructor
 @Table(name = "admins")
-public class Admin {
+public class Admin implements UserDetails {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
@@ -20,22 +22,39 @@ public class Admin {
     private String username;
     @Column(name = "password")
     private String password;
-    @Column(name = "roles")
-    private String roles = "ADMIN";
-    @Column(name = "permissions")
-    private String permissions = "";
+    @Column(name = "role")
+    @Enumerated(EnumType.STRING)
+    private Role role;
 
-    public List<String> getRoles() {
-        if (!roles.isEmpty()) {
-            return Arrays.asList(this.roles.split(","));
-        }
-        return new ArrayList<>();
+    public Admin(String username, String password) {
+        this.username = username;
+        this.password = password;
+        this.role = Role.ADMIN;
     }
 
-    public List<String> getPermissions() {
-        if (!this.permissions.isEmpty()) {
-            return Arrays.asList(this.permissions.split(","));
-        }
-        return new ArrayList<>();
+
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return List.of(new SimpleGrantedAuthority(role.name()));
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
     }
 }
